@@ -111,6 +111,7 @@ public class OptionsPage extends WizardPage {
         jLabel4 = new javax.swing.JLabel();
         instrumentCombo = new javax.swing.JComboBox();
         jLabel5 = new javax.swing.JLabel();
+        importDuplicatesCheckBox = new javax.swing.JCheckBox();
 
         jfc.setCurrentDirectory(new File("."));
         jfc.setFileFilter(new FileFilter() {
@@ -153,6 +154,9 @@ public class OptionsPage extends WizardPage {
 
         jLabel5.setText("<html>* The file must be a CSV (comma-separated values) file. Most spreadsheet programs can export or \"Save As\" this format.");
 
+        importDuplicatesCheckBox.setText("Import duplicate scores");
+        importDuplicatesCheckBox.setName("duplicates"); // NOI18N
+
         javax.swing.GroupLayout layout = new javax.swing.GroupLayout(this);
         this.setLayout(layout);
         layout.setHorizontalGroup(
@@ -160,7 +164,7 @@ public class OptionsPage extends WizardPage {
             .addGroup(layout.createSequentialGroup()
                 .addContainerGap()
                 .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                    .addComponent(jLabel5, javax.swing.GroupLayout.DEFAULT_SIZE, 592, Short.MAX_VALUE)
+                    .addComponent(jLabel5, javax.swing.GroupLayout.DEFAULT_SIZE, 614, Short.MAX_VALUE)
                     .addGroup(layout.createSequentialGroup()
                         .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                             .addComponent(jLabel2)
@@ -168,18 +172,19 @@ public class OptionsPage extends WizardPage {
                         .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                         .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                             .addGroup(layout.createSequentialGroup()
-                                .addComponent(fileField, javax.swing.GroupLayout.DEFAULT_SIZE, 483, Short.MAX_VALUE)
+                                .addComponent(fileField, javax.swing.GroupLayout.DEFAULT_SIZE, 505, Short.MAX_VALUE)
                                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                                 .addComponent(selectFileButton))
-                            .addComponent(gameField, javax.swing.GroupLayout.DEFAULT_SIZE, 539, Short.MAX_VALUE)))
+                            .addComponent(gameField, javax.swing.GroupLayout.DEFAULT_SIZE, 561, Short.MAX_VALUE)))
                     .addGroup(layout.createSequentialGroup()
                         .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                             .addComponent(jLabel4)
                             .addComponent(jLabel3))
                         .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                         .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(diffCombo, 0, 447, Short.MAX_VALUE)
-                            .addComponent(instrumentCombo, 0, 447, Short.MAX_VALUE))))
+                            .addComponent(diffCombo, 0, 469, Short.MAX_VALUE)
+                            .addComponent(instrumentCombo, 0, 469, Short.MAX_VALUE)))
+                    .addComponent(importDuplicatesCheckBox))
                 .addContainerGap())
         );
         layout.setVerticalGroup(
@@ -204,7 +209,9 @@ public class OptionsPage extends WizardPage {
                 .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                     .addComponent(jLabel4)
                     .addComponent(instrumentCombo, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
-                .addGap(85, 85, 85))
+                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                .addComponent(importDuplicatesCheckBox)
+                .addGap(51, 51, 51))
         );
     }// </editor-fold>//GEN-END:initComponents
 
@@ -223,6 +230,7 @@ private void selectFileButtonActionPerformed(java.awt.event.ActionEvent evt) {//
     private javax.swing.JComboBox diffCombo;
     private javax.swing.JTextField fileField;
     private javax.swing.JTextField gameField;
+    private javax.swing.JCheckBox importDuplicatesCheckBox;
     private javax.swing.JComboBox instrumentCombo;
     private javax.swing.JLabel jLabel1;
     private javax.swing.JLabel jLabel2;
